--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Rancho&display=swap');
+
+* {
+  font-family: 'Rancho', cursive, sans-serif;
+}
