--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm   navbar-light bg-light">
   <div class="container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+    <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,33 +8,35 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/pages/home" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item dropdown dmenu">
-          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            Our Service
-          </a>
-          <div class="dropdown-menu sm-menu">
-            <a class="dropdown-item" href="#">service2</a>
-            <a class="dropdown-item" href="#">service 2</a>
-            <a class="dropdown-item" href="#">service 3</a>
-          </div>
+          <a class="nav-link" routerLink="/pages/about-us" routerLinkActive="active">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" routerLink="/pages/contact-us" routerLinkActive="active">Contact Us</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Call</a>
-        </li>
+
+        <!--        <li class="nav-item dropdown dmenu">-->
+        <!--          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">-->
+        <!--            Our Service-->
+        <!--          </a>-->
+        <!--          <div class="dropdown-menu sm-menu">-->
+        <!--            <a class="dropdown-item" href="#">service2</a>-->
+        <!--            <a class="dropdown-item" href="#">service 2</a>-->
+        <!--            <a class="dropdown-item" href="#">service 3</a>-->
+        <!--          </div>-->
+        <!--        </li>-->
       </ul>
       <div class="social-part">
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-        <i class="fa fa-instagram" aria-hidden="true"></i>
+        <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a href=""> <i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href=""> <i class="fa fa-instagram" aria-hidden="true"></i></a>
       </div>
     </div>
   </div>
 </nav>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
