--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,194 @@
-<nav class="navbar navbar-expand-sm   navbar-light bg-light">
-  <div class="container">
-    <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<header>
+  <nav class="navbar navbar-expand-sm   navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" routerLink="/pages/home" routerLinkActive="active">Foody</a>
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/pages/home" routerLinkActive="active">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/pages/about-us" routerLinkActive="active">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/pages/contact-us" routerLinkActive="active">Contact Us</a>
-        </li>
+      <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarToggler"
+              aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!--        <li class="nav-item dropdown dmenu">-->
-        <!--          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">-->
-        <!--            Our Service-->
-        <!--          </a>-->
-        <!--          <div class="dropdown-menu sm-menu">-->
-        <!--            <a class="dropdown-item" href="#">service2</a>-->
-        <!--            <a class="dropdown-item" href="#">service 2</a>-->
-        <!--            <a class="dropdown-item" href="#">service 3</a>-->
-        <!--          </div>-->
-        <!--        </li>-->
-      </ul>
-      <div class="social-part">
-        <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-        <a href=""> <i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a href=""> <i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <div class="collapse navbar-collapse" id="navbarToggler">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/pages/home" routerLinkActive="active">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/pages/about-us" routerLinkActive="active">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/pages/contact-us" routerLinkActive="active">Contact Us</a>
+          </li>
+
+          <!--        <li class="nav-item dropdown dmenu">-->
+          <!--          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">-->
+          <!--            Our Service-->
+          <!--          </a>-->
+          <!--          <div class="dropdown-menu sm-menu">-->
+          <!--            <a class="dropdown-item" href="#">service2</a>-->
+          <!--            <a class="dropdown-item" href="#">service 2</a>-->
+          <!--            <a class="dropdown-item" href="#">service 3</a>-->
+          <!--          </div>-->
+          <!--        </li>-->
+        </ul>
+        <div class="social-part">
+          <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href=""> <i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a href=""> <i class="fa fa-instagram" aria-hidden="true"></i></a>
+        </div>
       </div>
     </div>
-  </div>
-</nav>
-<div class="container">
+  </nav>
+</header>
+
+<main role="main">
   <router-outlet></router-outlet>
-</div>
+  <footer class="footer-area footer--light">
+    <div class="footer-big">
+      <!-- start .container -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-sm-12">
+            <div class="footer-widget">
+              <div class="widget-about">
+                <img src="http://placehold.it/250x80" alt="" class="img-fluid">
+                <p>What if I write another text in Russian to check the Rubik font)</p>
+                <ul class="contact-details">
+                  <li>
+                    <span class="icon-earphones"></span> Call Us:
+                    <a href="tel:344-755-111">344-755-111</a>
+                  </li>
+                  <li>
+                    <span class="icon-envelope-open"></span>
+                    <a href="mailto:support@aazztech.com">support@aazztech.com</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <!-- Ends: .footer-widget -->
+          </div>
+          <!-- end /.col-md-4 -->
+          <div class="col-md-3 col-sm-4">
+            <div class="footer-widget">
+              <div class="footer-menu footer-menu--1">
+                <h4 class="footer-widget-title">Popular Category</h4>
+                <ul>
+                  <li>
+                    <a href="#">Wordpress</a>
+                  </li>
+                  <li>
+                    <a href="#">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="#">Joomla Template</a>
+                  </li>
+                  <li>
+                    <a href="#">Admin Template</a>
+                  </li>
+                  <li>
+                    <a href="#">HTML Template</a>
+                  </li>
+                </ul>
+              </div>
+              <!-- end /.footer-menu -->
+            </div>
+            <!-- Ends: .footer-widget -->
+          </div>
+          <!-- end /.col-md-3 -->
+
+          <div class="col-md-3 col-sm-4">
+            <div class="footer-widget">
+              <div class="footer-menu">
+                <h4 class="footer-widget-title">Our Company</h4>
+                <ul>
+                  <li>
+                    <a href="#">About Us</a>
+                  </li>
+                  <li>
+                    <a href="#">How It Works</a>
+                  </li>
+                  <li>
+                    <a href="#">Affiliates</a>
+                  </li>
+                  <li>
+                    <a href="#">Testimonials</a>
+                  </li>
+                  <li>
+                    <a href="#">Contact Us</a>
+                  </li>
+                  <li>
+                    <a href="#">Plan &amp; Pricing</a>
+                  </li>
+                  <li>
+                    <a href="#">Blog</a>
+                  </li>
+                </ul>
+              </div>
+              <!-- end /.footer-menu -->
+            </div>
+            <!-- Ends: .footer-widget -->
+          </div>
+          <!-- end /.col-lg-3 -->
+
+          <div class="col-md-3 col-sm-4">
+            <div class="footer-widget">
+              <div class="footer-menu p-0">
+                <h4 class="footer-widget-title">Help Support</h4>
+                <ul class="p-0 m-0">
+                  <li>
+                    <a href="#">Support Forum</a>
+                  </li>
+                  <li>
+                    <a href="#">Terms &amp; Conditions</a>
+                  </li>
+                  <li>
+                    <a href="#">Support Policy</a>
+                  </li>
+                  <li>
+                    <a href="#">Refund Policy</a>
+                  </li>
+                  <li>
+                    <a href="#">FAQs</a>
+                  </li>
+                  <li>
+                    <a href="#">Buyers Faq</a>
+                  </li>
+                  <li>
+                    <a href="#">Sellers Faq</a>
+                  </li>
+                </ul>
+              </div>
+              <!-- end /.footer-menu -->
+            </div>
+            <!-- Ends: .footer-widget -->
+          </div>
+          <!-- Ends: .col-lg-3 -->
+
+        </div>
+        <!-- end /.row -->
+      </div>
+      <!-- end /.container -->
+    </div>
+    <!-- end /.footer-big -->
+
+    <div class="mini-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="copyright-text">
+              <p>© 2018
+                <a href="#">DigiPro</a>. All rights reserved. Created by
+                <a href="#">AazzTech</a>
+              </p>
+            </div>
+
+            <div class="go_top">
+              <span class="icon-arrow-up"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</main>
 
