completed landing page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
           <div class="col-md-3 col-sm-12">
             <div class="footer-widget">
               <div class="widget-about">
-                <img src="http://placehold.it/250x80" alt="" class="img-fluid">
+                <img src="assets/images/app-icon.png" alt="" class="img-fluid app-icon  ">
                 <p>What if I write another text in Russian to check the Rubik font)</p>
                 <ul class="contact-details">
                   <li>
@@ -71,7 +71,7 @@
           <div class="col-md-3 col-sm-4">
             <div class="footer-widget">
               <div class="footer-menu footer-menu--1">
-                <h4 class="footer-widget-title">Popular Category</h4>
+                <h4 class="footer-widget-title sb-text-primary">Popular Category</h4>
                 <ul>
                   <li>
                     <a href="#">Wordpress</a>
@@ -99,7 +99,7 @@
           <div class="col-md-3 col-sm-4">
             <div class="footer-widget">
               <div class="footer-menu">
-                <h4 class="footer-widget-title">Our Company</h4>
+                <h4 class="footer-widget-title sb-text-primary">Our Company</h4>
                 <ul>
                   <li>
                     <a href="#">About Us</a>
@@ -133,7 +133,7 @@
           <div class="col-md-3 col-sm-4">
             <div class="footer-widget">
               <div class="footer-menu p-0">
-                <h4 class="footer-widget-title">Help Support</h4>
+                <h4 class="footer-widget-title sb-text-primary">Help Support</h4>
                 <ul class="p-0 m-0">
                   <li>
                     <a href="#">Support Forum</a>
