--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,12 +7,27 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="assets/images/slideshow-1.jpg" alt="First slide">
+      <div class="carousel-caption">
+        <h2>The ultimate one-stop office food solution</h2>
+        <p>Easily order for your next meeting or event</p>
+        <button class="btn btn-danger">Join as Chef</button>
+      </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="assets/images/slideshow-2.jpg" alt="Second slide">
+      <div class="carousel-caption">
+        <h2>The ultimate one-stop office food solution</h2>
+        <p>Easily order for your next meeting or event</p>
+        <button class="btn btn-danger">Join as Customer</button>
+      </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="assets/images/slideshow-3.jpg" alt="Third slide">
+      <div class="carousel-caption">
+        <h2>The ultimate one-stop office food solution</h2>
+        <p>Easily order for your next meeting or event</p>
+        <button class="btn btn-danger">Join as Rider</button>
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -24,3 +39,135 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+
+<section class="stats section container has-bottom-divider sb-app-c6">
+  <div class="row ">
+    <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
+      <span class="fa fa-apple fa-2x"></span>
+      <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
+        <h5 class="mb-0 ">200.000+</h5>
+        <small class="sb-text-primary">Corporate meals delivered</small>
+      </div>
+    </div>
+
+    <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
+      <span class="fa fa-phone fa-2x"></span>
+      <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
+        <h5 class="mb-0 ">200.000+</h5>
+        <small class="sb-text-primary">Corporate meals delivered</small>
+      </div>
+    </div>
+
+
+    <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
+      <span class="fa fa-yelp fa-2x"></span>
+      <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
+        <h5 class="mb-0 ">200.000+</h5>
+        <small class="sb-text-primary">Corporate meals delivered</small>
+      </div>
+    </div>
+
+
+    <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
+      <span class="fa fa-user fa-2x"></span>
+      <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
+        <h5 class="mb-0 ">200.000+</h5>
+        <small class="sb-text-primary">Corporate meals delivered</small>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="features section text-center sb-app-c6">
+  <div class="container">
+    <h3 class="text-center mb-4">Our product
+      offerings</h3>
+    <div class="features-inner section-inner">
+      <div class="row flex-center">
+        <div class="feature col-md-6">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="feature col-md-6">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="feature col-md-6">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="feature col-md-6">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="app-section section has-bottom-divider">
+  <div class="container-sm d-flex flex-column justify-content-center align-items-center">
+    <img class="mb-3 app-icon" src="assets/images/app-icon.png">
+    <h2 class="section-title mt-0 text-center">Download our brand new app today!</h2>
+    <p class="section-paragraph text-center"> Get delicious dishes from restaurants around you,
+      delivered to your office doorstep at unbeatable prices. </p>
+    <p class="sb-text-primary text-center" style="font-weight: 700;font-size: 13px;"> FREE
+      DELIVERY • NO MINIMUM ORDER • NO HIDDEN FEES • ORDER FROM MULTIPLE RESTAURANTS </p>
+    <div class="d-flex flex-row download_from_store">
+      <a href="">
+        <img
+          alt="Get it on Google Play"
+          src="assets/images/android_app.png"></a>
+      <a href="">
+        <img alt="Download on the App Store" src="assets/images/app_store_icon.svg" style="padding: 11px;">
+      </a>
+    </div>
+  </div>
+</section>
