--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,13 @@
 * {
   font-family: 'Rancho', cursive, sans-serif;
 }
+
+.sb-text-primary {
+  color: #ed6a5e !important;
+}
+
+.app-icon {
+  height: 150px;
+  width: 150px;
+}
+
