--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -83,7 +83,7 @@ footer {
   line-height: 40px;
   cursor: pointer;
   width: 40px;
-  background: #5867dd;
+  background: #dc3545;
   color: #fff;
   position: fixed;
   -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, .1);
