update contact us page

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,3 +1,18 @@
+<div class="bg-light">
+  <div class="container py-2">
+    <div class="row h-100 align-items-center py-2">
+      <div class="col-lg-6">
+        <h1 class="display-4">Contact us page</h1>
+        <p class="lead text-muted mb-0">Create a minimal about us page using Bootstrap 4.</p>
+        <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets" class="text-muted">
+          <u>Bootstrapious</u></a>
+        </p>
+      </div>
+      <div class="col-lg-6 d-none d-lg-block"><img
+        src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/illus_kftyh4.png" alt="" class="img-fluid"></div>
+    </div>
+  </div>
+</div>
 <div class="container-contact100">
   <div class="wrap-contact100">
     <form class="contact100-form validate-form">
@@ -33,13 +48,13 @@
       </div>
     </form>
 
-    <div class="contact100-more flex-col-c-m" style="background-image: url('assets/images/online-payment.svg');">
+    <div class="contact100-more flex-col-c-m" style="background-image: url('assets/images/slideshow-1.jpg');">
       <div class="flex-w size1 p-b-47">
         <div class="txt1 p-r-25">
           <span class="lnr lnr-map-marker"></span>
         </div>
         <div class="flex-col size2">
-          <span class="txt1 p-b-20">Address</span>
+          <span class="txt1 p-b-20">Address - </span>
           <span class="txt2">Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US</span>
         </div>
       </div>
@@ -48,7 +63,7 @@
           <span class="lnr lnr-phone-handset"></span>
         </div>
         <div class="flex-col size2">
-          <span class="txt1 p-b-20">Lets Talk</span>
+          <span class="txt1 p-b-20">Lets Talk - </span>
           <span class="txt3">+1 800 1236879</span>
         </div>
       </div>
@@ -57,7 +72,7 @@
           <span class="lnr lnr-envelope"></span>
         </div>
         <div class="flex-col size2">
-          <span class="txt1 p-b-20">General Support</span>
+          <span class="txt1 p-b-20">General Support - </span>
           <span class="txt3">
             <a href="" class="__cf_email__">[email&#160;protected]</a>
           </span>
