added contact us image

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -9,7 +9,7 @@
         </p>
       </div>
       <div class="col-lg-6 d-none d-lg-block"><img
-        src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/illus_kftyh4.png" alt="" class="img-fluid"></div>
+        src="assets/images/contact-page.png" alt="" class="img-fluid"></div>
     </div>
   </div>
 </div>
