added home new section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -79,6 +79,24 @@
   </div>
 </section>
 
+<div class="bg-light">
+  <div class="container py-2">
+    <div class="row align-items-center py-2">
+      <div class="col-lg-6">
+        <h1 class="display-4 text-uppercase">Belicious</h1>
+        <p class="lead text-muted">what are you craving for?</p>
+        <p class="lead sb-text-primary">The ultimate one-stop office food solution</p>
+        <button class="btn btn-danger">Order Now</button>
+        <!--        <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets" class="text-muted">-->
+        <!--          <u>Bootstrapious</u></a>-->
+        <!--        </p>-->
+      </div>
+      <div class="col-lg-6 d-none d-lg-block"><img
+        src="assets/images/about-us.png" alt="" class="img-fluid"></div>
+    </div>
+  </div>
+</div>
+
 
 <section class="features section text-center sb-app-c6">
   <div class="container">
