update send message btn

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -42,7 +42,7 @@
         <span class="focus-input100"></span>
       </div>
       <div class="container-contact100-form-btn">
-        <button class="contact100-form-btn">
+        <button class="btn btn-danger">
           Send Message
         </button>
       </div>
