--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
       <div class="carousel-caption">
         <h2>The ultimate one-stop office food solution</h2>
         <p>Easily order for your next meeting or event</p>
-        <button class="btn btn-danger">Join as Chef</button>
+        <button class="btn btn-danger">Become a home-chef</button>
       </div>
     </div>
     <div class="carousel-item">
@@ -18,7 +18,7 @@
       <div class="carousel-caption">
         <h2>The ultimate one-stop office food solution</h2>
         <p>Easily order for your next meeting or event</p>
-        <button class="btn btn-danger">Join as Customer</button>
+        <button class="btn btn-danger">Become a Foody</button>
       </div>
     </div>
     <div class="carousel-item">
@@ -26,7 +26,7 @@
       <div class="carousel-caption">
         <h2>The ultimate one-stop office food solution</h2>
         <p>Easily order for your next meeting or event</p>
-        <button class="btn btn-danger">Join as Rider</button>
+        <button class="btn btn-danger">Become a Rider</button>
       </div>
     </div>
   </div>
@@ -44,36 +44,36 @@
 <section class="stats section container has-bottom-divider sb-app-c6">
   <div class="row ">
     <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
-      <span class="fa fa-apple fa-2x"></span>
+      <span class="fa fa-angellist fa-2x"></span>
       <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
-        <h5 class="mb-0 ">200.000+</h5>
-        <small class="sb-text-primary">Corporate meals delivered</small>
+        <h5 class="mb-0 ">0+</h5>
+        <small class="sb-text-primary">Belicious Foodies</small>
       </div>
     </div>
 
     <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
-      <span class="fa fa-phone fa-2x"></span>
+      <span class="fa fa-users fa-2x"></span>
       <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
-        <h5 class="mb-0 ">200.000+</h5>
-        <small class="sb-text-primary">Corporate meals delivered</small>
-      </div>
-    </div>
-
-
-    <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
-      <span class="fa fa-yelp fa-2x"></span>
-      <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
-        <h5 class="mb-0 ">200.000+</h5>
-        <small class="sb-text-primary">Corporate meals delivered</small>
+        <h5 class="mb-0 ">0+</h5>
+        <small class="sb-text-primary">Belicious Home-Chef</small>
       </div>
     </div>
 
 
     <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
-      <span class="fa fa-user fa-2x"></span>
+      <span class="fa fa-bicycle fa-2x"></span>
       <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
-        <h5 class="mb-0 ">200.000+</h5>
-        <small class="sb-text-primary">Corporate meals delivered</small>
+        <h5 class="mb-0 ">0+</h5>
+        <small class="sb-text-primary">Belicious Riders</small>
+      </div>
+    </div>
+
+
+    <div class="col-6 col-md-3 d-flex flex-column flex-md-row justify-content-center align-items-center ">
+      <span class="fa fa-themeisle fa-2x"></span>
+      <div class="d-flex flex-column ml-md-3 text-center text-md-left mt-3 mt-md-0 ">
+        <h5 class="mb-0 ">0+</h5>
+        <small class="sb-text-primary">Meals delivered</small>
       </div>
     </div>
   </div>
@@ -84,15 +84,12 @@
     <div class="row align-items-center py-2">
       <div class="col-lg-6">
         <h1 class="display-4 text-uppercase">Belicious</h1>
-        <p class="lead text-muted">what are you craving for?</p>
-        <p class="lead sb-text-primary">The ultimate one-stop office food solution</p>
-        <button class="btn btn-danger">Order Now</button>
-        <!--        <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets" class="text-muted">-->
-        <!--          <u>Bootstrapious</u></a>-->
-        <!--        </p>-->
+        <p class="lead sb-text-primary">what are you craving for?</p>
+        <p class="lead text-muted">The ultimate one-stop office food solution</p>
+        <a href="#">Learn about our home-chef</a>
       </div>
-      <div class="col-lg-6 d-none d-lg-block"><img
-        src="assets/images/about-us.png" alt="" class="img-fluid"></div>
+      <div class="col-lg-6 d-none d-lg-block">
+        <img src="assets/images/about-us.png" alt="" class="img-fluid"></div>
     </div>
   </div>
 </div>
@@ -100,11 +97,10 @@
 
 <section class="features section text-center sb-app-c6">
   <div class="container">
-    <h3 class="text-center mb-4">Our product
-      offerings</h3>
+    <h3 class="text-center sb-text-primary mb-4">Our product offerings</h3>
     <div class="features-inner section-inner">
       <div class="row flex-center">
-        <div class="feature col-md-6">
+        <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
@@ -119,7 +115,7 @@
             </div>
           </div>
         </div>
-        <div class="feature col-md-6">
+        <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
@@ -134,7 +130,7 @@
             </div>
           </div>
         </div>
-        <div class="feature col-md-6">
+        <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
@@ -149,7 +145,37 @@
             </div>
           </div>
         </div>
-        <div class="feature col-md-6">
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
