--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Yeseva+One&display=swap');
 
+* {
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
+
 .bg-black {
   background-color: #000000;
 }
