--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -2,11 +2,8 @@
   <div class="container py-2">
     <div class="row h-100 align-items-center py-2">
       <div class="col-lg-6">
-        <h1 class="display-4">Contact us page</h1>
-        <p class="lead text-muted mb-0">Create a minimal about us page using Bootstrap 4.</p>
-        <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets" class="text-muted">
-          <u>Bootstrapious</u></a>
-        </p>
+        <h1 class="display-4">Contact us</h1>
+        <p class="lead text-muted mb-0">Tell us how can we serve you better....</p>
       </div>
       <div class="col-lg-6 d-none d-lg-block"><img
         src="assets/images/contact-page.png" alt="" class="img-fluid"></div>
