--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -84,8 +84,7 @@
     <div class="row align-items-center py-2">
       <div class="col-lg-6">
         <h1 class="display-4 text-uppercase">Belicious</h1>
-        <p class="lead sb-text-primary">what are you craving for?</p>
-        <p class="lead text-muted">The ultimate one-stop office food solution</p>
+        <p class="lead sb-text-primary">what are you craving for? <span class="text-black-50">The ultimate one-stop office food solution</span></p>
         <a href="#">Learn about our home-chef</a>
       </div>
       <div class="col-lg-6 d-none d-lg-block">
@@ -104,7 +103,7 @@
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
-            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <h4 class="feature-title h3-mobile mb-8">Indian Food</h4>
             <p class="sb-text-cancel"><b>Dine together</b> with your
               colleagues, organize your next <b>meeting</b> or set up a big <b
               >event</b>: we got you covered.</p>
@@ -119,7 +118,7 @@
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
-            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <h4 class="feature-title h3-mobile mb-8">Korean</h4>
             <p class="sb-text-cancel"><b>Dine together</b> with your
               colleagues, organize your next <b>meeting</b> or set up a big <b
               >event</b>: we got you covered.</p>
@@ -134,7 +133,7 @@
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
-            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <h4 class="feature-title h3-mobile mb-8">Korean</h4>
             <p class="sb-text-cancel"><b>Dine together</b> with your
               colleagues, organize your next <b>meeting</b> or set up a big <b
               >event</b>: we got you covered.</p>
@@ -149,7 +148,7 @@
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
-            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <h4 class="feature-title h3-mobile mb-8">Western</h4>
             <p class="sb-text-cancel"><b>Dine together</b> with your
               colleagues, organize your next <b>meeting</b> or set up a big <b
               >event</b>: we got you covered.</p>
@@ -164,7 +163,7 @@
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
-            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <h4 class="feature-title h3-mobile mb-8">Thai and Vietnam</h4>
             <p class="sb-text-cancel"><b>Dine together</b> with your
               colleagues, organize your next <b>meeting</b> or set up a big <b
               >event</b>: we got you covered.</p>
@@ -179,7 +178,7 @@
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
-            <h4 class="feature-title h3-mobile mb-8">Order online</h4>
+            <h4 class="feature-title h3-mobile mb-8">Arabian</h4>
             <p class="sb-text-cancel"><b>Dine together</b> with your
               colleagues, organize your next <b>meeting</b> or set up a big <b
               >event</b>: we got you covered.</p>
@@ -198,8 +197,8 @@
 
 <section class="app-section section has-bottom-divider">
   <div class="container-sm d-flex flex-column justify-content-center align-items-center">
-    <img class="mb-3 app-icon" src="assets/images/app-icon.png">
-    <h2 class="section-title mt-0 text-center">Download our brand new app today!</h2>
+    <img class="mb-3 app-icons" src="assets/icons/app-icon-white-bg.png">
+    <h4 class="section-title mt-0 text-center">Download our brand new app today!</h4>
     <p class="section-paragraph text-center"> Get delicious dishes from restaurants around you,
       delivered to your office doorstep at unbeatable prices. </p>
     <p class="sb-text-primary text-center" style="font-weight: 700;font-size: 13px;"> FREE
