--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,133 +47,120 @@
 
 <main role="main">
   <router-outlet></router-outlet>
-  <footer class="footer-area footer--light">
-    <div class="footer-big">
-      <!-- start .container -->
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-12">
-            <div class="footer-widget">
-              <div class="widget-about">
-                <img src="assets/images/app-icon.png" alt="" class="img-fluid app-icon  ">
-                <p>What if I write another text in Russian to check the Rubik font)</p>
-                <ul class="contact-details">
-                  <li>
-                    <span class="icon-earphones"></span> Call Us:
-                    <a href="tel:344-755-111">344-755-111</a>
-                  </li>
-                  <li>
-                    <span class="icon-envelope-open"></span>
-                    <a href="mailto:support@aazztech.com">support@aazztech.com</a>
-                  </li>
-                </ul>
-              </div>
+  <footer class="footer-area footer--light footer-big">
+    <!-- start .container -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-12">
+          <div class="footer-widget">
+            <div class="widget-about">
+              <img src="assets/icons/app-icon-ash-bg.png" alt="" class="img-fluid">
+              <p> Plot# 14 Road# 3, Block# A, Mirpur 11, Harun Mollah Shorok-Main Road, Dhaka, 1216, Bangladesh</p>
             </div>
-            <!-- Ends: .footer-widget -->
           </div>
-          <!-- end /.col-md-4 -->
-          <div class="col-md-3 col-sm-4">
-            <div class="footer-widget">
-              <div class="footer-menu footer-menu--1">
-                <h4 class="footer-widget-title sb-text-primary">Popular Category</h4>
-                <ul>
-                  <li>
-                    <a href="#">Wordpress</a>
-                  </li>
-                  <li>
-                    <a href="#">Plugins</a>
-                  </li>
-                  <li>
-                    <a href="#">Joomla Template</a>
-                  </li>
-                  <li>
-                    <a href="#">Admin Template</a>
-                  </li>
-                  <li>
-                    <a href="#">HTML Template</a>
-                  </li>
-                </ul>
-              </div>
-              <!-- end /.footer-menu -->
-            </div>
-            <!-- Ends: .footer-widget -->
-          </div>
-          <!-- end /.col-md-3 -->
-
-          <div class="col-md-3 col-sm-4">
-            <div class="footer-widget">
-              <div class="footer-menu">
-                <h4 class="footer-widget-title sb-text-primary">Our Company</h4>
-                <ul>
-                  <li>
-                    <a href="#">About Us</a>
-                  </li>
-                  <li>
-                    <a href="#">How It Works</a>
-                  </li>
-                  <li>
-                    <a href="#">Affiliates</a>
-                  </li>
-                  <li>
-                    <a href="#">Testimonials</a>
-                  </li>
-                  <li>
-                    <a href="#">Contact Us</a>
-                  </li>
-                  <li>
-                    <a href="#">Plan &amp; Pricing</a>
-                  </li>
-                  <li>
-                    <a href="#">Blog</a>
-                  </li>
-                </ul>
-              </div>
-              <!-- end /.footer-menu -->
-            </div>
-            <!-- Ends: .footer-widget -->
-          </div>
-          <!-- end /.col-lg-3 -->
-
-          <div class="col-md-3 col-sm-4">
-            <div class="footer-widget">
-              <div class="footer-menu p-0">
-                <h4 class="footer-widget-title sb-text-primary">Help Support</h4>
-                <ul class="p-0 m-0">
-                  <li>
-                    <a href="#">Support Forum</a>
-                  </li>
-                  <li>
-                    <a href="#">Terms &amp; Conditions</a>
-                  </li>
-                  <li>
-                    <a href="#">Support Policy</a>
-                  </li>
-                  <li>
-                    <a href="#">Refund Policy</a>
-                  </li>
-                  <li>
-                    <a href="#">FAQs</a>
-                  </li>
-                  <li>
-                    <a href="#">Buyers Faq</a>
-                  </li>
-                  <li>
-                    <a href="#">Sellers Faq</a>
-                  </li>
-                </ul>
-              </div>
-              <!-- end /.footer-menu -->
-            </div>
-            <!-- Ends: .footer-widget -->
-          </div>
-          <!-- Ends: .col-lg-3 -->
-
+          <!-- Ends: .footer-widget -->
         </div>
-        <!-- end /.row -->
+        <!-- end /.col-md-4 -->
+        <div class="col-md-3 col-sm-4">
+          <div class="footer-widget">
+            <div class="footer-menu footer-menu--1">
+              <h4 class="footer-widget-title sb-text-primary">Popular Category</h4>
+              <ul>
+                <li>
+                  <a href="#">Indian</a>
+                </li>
+                <li>
+                  <a href="#">Korean</a>
+                </li>
+                <li>
+                  <a href="#">Chinese</a>
+                </li>
+                <li>
+                  <a href="#">Western</a>
+                </li>
+                <li>
+                  <a href="#">Thai & Vietnam</a>
+                </li>
+              </ul>
+            </div>
+            <!-- end /.footer-menu -->
+          </div>
+          <!-- Ends: .footer-widget -->
+        </div>
+        <!-- end /.col-md-3 -->
+
+        <div class="col-md-3 col-sm-4">
+          <div class="footer-widget">
+            <div class="footer-menu">
+              <h4 class="footer-widget-title sb-text-primary">Our Company</h4>
+              <ul>
+                <li>
+                  <a href="#">About Us</a>
+                </li>
+                <li>
+                  <a href="#">How It Works</a>
+                </li>
+                <li>
+                  <a href="#">Affiliates</a>
+                </li>
+                <li>
+                  <a href="#">Testimonials</a>
+                </li>
+                <li>
+                  <a href="#">Contact Us</a>
+                </li>
+                <li>
+                  <a href="#">Plan &amp; Pricing</a>
+                </li>
+                <li>
+                  <a href="#">Blog</a>
+                </li>
+              </ul>
+            </div>
+            <!-- end /.footer-menu -->
+          </div>
+          <!-- Ends: .footer-widget -->
+        </div>
+        <!-- end /.col-lg-3 -->
+
+        <div class="col-md-3 col-sm-4">
+          <div class="footer-widget">
+            <div class="footer-menu p-0">
+              <h4 class="footer-widget-title sb-text-primary">Help Support</h4>
+              <ul class="p-0 m-0">
+                <li>
+                  <a href="#">Support Forum</a>
+                </li>
+                <li>
+                  <a href="#">Terms &amp; Conditions</a>
+                </li>
+                <li>
+                  <a href="#">Support Policy</a>
+                </li>
+                <li>
+                  <a href="#">Refund Policy</a>
+                </li>
+                <li>
+                  <a href="#">FAQs</a>
+                </li>
+                <li>
+                  <a href="#">Buyers Faq</a>
+                </li>
+                <li>
+                  <a href="#">Sellers Faq</a>
+                </li>
+              </ul>
+            </div>
+            <!-- end /.footer-menu -->
+          </div>
+          <!-- Ends: .footer-widget -->
+        </div>
+        <!-- Ends: .col-lg-3 -->
+
       </div>
-      <!-- end /.container -->
+      <!-- end /.row -->
     </div>
-    <!-- end /.footer-big -->
+    <!-- end /.container -->
 
     <div class="mini-footer">
       <div class="container">
@@ -181,8 +168,8 @@
           <div class="col-md-12">
             <div class="copyright-text">
               <p>© 2018
-                <a href="#">DigiPro</a>. All rights reserved. Created by
-                <a href="#">AazzTech</a>
+                <a routerLink="/">Belicious</a>. All rights reserved. Created by
+                <a routerLink="/">Belicious.com</a>
               </p>
             </div>
 
