--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,12 +1,9 @@
 <div class="bg-light">
   <div class="container py-2">
-    <div class="row h-100 align-items-center py-2">
+    <div class="row align-items-center py-2">
       <div class="col-lg-6">
-        <h1 class="display-4">About us page</h1>
-        <p class="lead text-muted mb-0">Create a minimal about us page using Bootstrap 4.</p>
-        <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets" class="text-muted">
-          <u>Bootstrapious</u></a>
-        </p>
+        <h3 class="display-4">The Belicious Story</h3>
+        <p class="lead text-muted mb-0">We care about your health and time...</p>
       </div>
       <div class="col-lg-6 d-none d-lg-block"><img
         src="assets/images/about-us.png" alt="" class="img-fluid"></div>
@@ -18,26 +15,23 @@
   <div class="container py-5">
     <div class="row align-items-center mb-5">
       <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-        <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-        <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua.</p><a href="#"
-                                                                    class="btn btn-light px-5 rounded-pill shadow-sm">Learn
-          More</a>
+        <h2 class="font-weight-light">We Value your food nutrition's as well as every calories you take...</h2>
+        <p class="font-italic text-muted mb-4">Check our band new dashboard after you order to find the food value and
+          statistics...</p>
+        <!--        <a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>-->
       </div>
-      <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-        src="https://res.cloudinary.com/mhmd/image/upload/v1556834139/img-1_e25nvh.jpg" alt=""
-        class="img-fluid mb-4 mb-lg-0"></div>
+      <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2">
+        <img src="assets/foods/img-1_e25nvh.jpg" alt="" class="img-fluid mb-4 mb-lg-0">
+      </div>
     </div>
     <div class="row align-items-center">
       <div class="col-lg-5 px-5 mx-auto"><img
-        src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/img-2_vdgqgn.jpg" alt=""
-        class="img-fluid mb-4 mb-lg-0"></div>
+        src="assets/foods/img-2_vdgqgn.jpg" alt="" class="img-fluid mb-4 mb-lg-0">
+      </div>
       <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
-        <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-        <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua.</p><a href="#"
-                                                                    class="btn btn-light px-5 rounded-pill shadow-sm">Learn
-          More</a>
+        <h2 class="font-weight-light">We know your choice before you order almost,</h2>
+        <p class="font-italic text-muted mb-4">Our best chef are only one click away from you..</p>
+        <!--        <a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>-->
       </div>
     </div>
   </div>
@@ -47,18 +41,18 @@
   <div class="container py-5">
     <div class="row mb-4">
       <div class="col-lg-5">
-        <h2 class="display-4 font-weight-light">Our team</h2>
-        <p class="font-italic text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <h2 class="display-4 font-weight-light">Our Team</h2>
+        <p class="font-italic text-muted">Meet our team who care you the most.</p>
       </div>
     </div>
 
-    <div class="row text-center">
+    <div class="row text-center flex-center">
       <!-- Team item-->
       <div class="col-xl-3 col-sm-6 mb-5">
-        <div class="bg-white rounded shadow-sm py-5 px-4"><img
-          src="https://res.cloudinary.com/mhmd/image/upload/v1556834132/avatar-4_ozhrib.png" alt="" width="100"
-          class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Manuella Nevoresky</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+        <div class="bg-white rounded shadow-sm py-5 px-4">
+          <img src="assets/our-team/avatar-1_s02nlg.png" alt="" width="100"
+               class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+          <h5 class="mb-0">Robin Hassan</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
           <ul class="social mb-0 list-inline mt-3">
             <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
             <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
@@ -71,10 +65,10 @@
 
       <!-- Team item-->
       <div class="col-xl-3 col-sm-6 mb-5">
-        <div class="bg-white rounded shadow-sm py-5 px-4"><img
-          src="https://res.cloudinary.com/mhmd/image/upload/v1556834130/avatar-3_hzlize.png" alt="" width="100"
-          class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Samuel Hardy</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+        <div class="bg-white rounded shadow-sm py-5 px-4">
+          <img src="assets/our-team/avatar-2_f8dowd.png" alt="" width="100"
+               class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+          <h5 class="mb-0">Arif Billah</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
           <ul class="social mb-0 list-inline mt-3">
             <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
             <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
@@ -86,35 +80,35 @@
       <!-- End-->
 
       <!-- Team item-->
-      <div class="col-xl-3 col-sm-6 mb-5">
-        <div class="bg-white rounded shadow-sm py-5 px-4"><img
-          src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-2_f8dowd.png" alt="" width="100"
-          class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Tom Sunderland</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-          <ul class="social mb-0 list-inline mt-3">
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
+      <!--      <div class="col-xl-3 col-sm-6 mb-5">-->
+      <!--        <div class="bg-white rounded shadow-sm py-5 px-4"><img-->
+      <!--          src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-2_f8dowd.png" alt="" width="100"-->
+      <!--          class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">-->
+      <!--          <h5 class="mb-0">Tom Sunderland</h5><span class="small text-uppercase text-muted">CEO - Founder</span>-->
+      <!--          <ul class="social mb-0 list-inline mt-3">-->
+      <!--            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>-->
+      <!--            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>-->
+      <!--            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>-->
+      <!--            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>-->
+      <!--          </ul>-->
+      <!--        </div>-->
+      <!--      </div>-->
       <!-- End-->
 
       <!-- Team item-->
-      <div class="col-xl-3 col-sm-6 mb-5">
-        <div class="bg-white rounded shadow-sm py-5 px-4"><img
-          src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-1_s02nlg.png" alt="" width="100"
-          class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">John Tarly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-          <ul class="social mb-0 list-inline mt-3">
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
+      <!--      <div class="col-xl-3 col-sm-6 mb-5">-->
+      <!--        <div class="bg-white rounded shadow-sm py-5 px-4"><img-->
+      <!--          src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-1_s02nlg.png" alt="" width="100"-->
+      <!--          class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">-->
+      <!--          <h5 class="mb-0">John Tarly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>-->
+      <!--          <ul class="social mb-0 list-inline mt-3">-->
+      <!--            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>-->
+      <!--            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>-->
+      <!--            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>-->
+      <!--            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>-->
+      <!--          </ul>-->
+      <!--        </div>-->
+      <!--      </div>-->
       <!-- End-->
 
     </div>
