--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,7 @@ a, p, span, h4 {
   color: #ed6a5e !important;
 }
 
-.nav-link {
+.nav-link, .nav-link a {
   color: #ffffff !important;
   font-size: 15px !important;
 }
