--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
 
       <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarToggler"
               aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon">
+          <i class="fa fa-bars" style="color:#fff; font-size:28px;"></i>
+        </span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarToggler">
