--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -46,35 +46,35 @@
     </form>
 
     <div class="contact100-more flex-col-c-m" style="background-image: url('assets/images/slideshow-1.jpg');">
-      <div class="flex-w size1 p-b-47">
-        <div class="txt1 p-r-25">
-          <span class="lnr lnr-map-marker"></span>
-        </div>
-        <div class="flex-col size2">
-          <span class="txt1 p-b-20">Address - </span>
-          <span class="txt2">Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US</span>
-        </div>
-      </div>
-      <div class="dis-flex size1 p-b-47">
-        <div class="txt1 p-r-25">
-          <span class="lnr lnr-phone-handset"></span>
-        </div>
-        <div class="flex-col size2">
-          <span class="txt1 p-b-20">Lets Talk - </span>
-          <span class="txt3">+1 800 1236879</span>
-        </div>
-      </div>
-      <div class="dis-flex size1 p-b-47">
-        <div class="txt1 p-r-25">
-          <span class="lnr lnr-envelope"></span>
-        </div>
-        <div class="flex-col size2">
-          <span class="txt1 p-b-20">General Support - </span>
-          <span class="txt3">
-            <a href="" class="__cf_email__">[email&#160;protected]</a>
-          </span>
-        </div>
-      </div>
+      <!--      <div class="flex-w size1 p-b-47">-->
+      <!--        <div class="txt1 p-r-25">-->
+      <!--          <span class="lnr lnr-map-marker"></span>-->
+      <!--        </div>-->
+      <!--        <div class="flex-col size2">-->
+      <!--          <span class="txt1 p-b-20">Address - </span>-->
+      <!--          <span class="txt2">Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US</span>-->
+      <!--        </div>-->
+      <!--      </div>-->
+      <!--      <div class="dis-flex size1 p-b-47">-->
+      <!--        <div class="txt1 p-r-25">-->
+      <!--          <span class="lnr lnr-phone-handset"></span>-->
+      <!--        </div>-->
+      <!--        <div class="flex-col size2">-->
+      <!--          <span class="txt1 p-b-20">Lets Talk - </span>-->
+      <!--          <span class="txt3">+1 800 1236879</span>-->
+      <!--        </div>-->
+      <!--      </div>-->
+      <!--      <div class="dis-flex size1 p-b-47">-->
+      <!--        <div class="txt1 p-r-25">-->
+      <!--          <span class="lnr lnr-envelope"></span>-->
+      <!--        </div>-->
+      <!--        <div class="flex-col size2">-->
+      <!--          <span class="txt1 p-b-20">General Support - </span>-->
+      <!--          <span class="txt3">-->
+      <!--            <a href="" class="__cf_email__">[email&#160;protected]</a>-->
+      <!--          </span>-->
+      <!--        </div>-->
+      <!--      </div>-->
       <div class="dis-flex mt-5">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7385454405776!2d103.9637431498646!3d1.3330224990229957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da3d76e8128d43%3A0xb624c230c94b63e7!2sCognizant%20Technology%20Solutions%20Singapore!5e0!3m2!1sen!2ssg!4v1575460757253!5m2!1sen!2ssg"
